# pm_wrapper

./: README.md  pyproject.toml
.config/: user_config.json
.config/profiles/brew_admin/: config.json
.devcontainer/: devcontainer.json
conf.d/: config.json
pm_wrapper/: main  main.py
pm_wrapper/commands/: __init__.py  command_base.py  install.py  install_command.py  update_command.py
pm_wrapper/commands/options/: __init__.py  all_option.py  dry_run_option.py  file_option.py  force_option.py  help_option.py  option_base.py  os_option.py  package_manager_option.py  quiet_option.py  target_option.py  verbose_option.py  version_option.py  yes_option.py
pm_wrapper/config/: __init__.py  config.py  config_base.py  package_config.py  package_detail_config.py  user_config.py
pm_wrapper/operating_system/: __init__.py  darwin.py  free_bsd.py  open_bsd.py  os_base.py  ubuntu.py  windows.py
pm_wrapper/package_manager/: __init__.py  brew.py  package_manager_base.py
