[tool.poetry]
name = "pm_wrapper"
version = "0.1.0"
description = ""
authors = ["varubogu <toyosuke@varubogu.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
main = "pm_wrapper.main:main"
build = "pm_wrapper.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
